5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_2704.log
== TEST (2019-04-09 10:39:17) 
-- CODE:
nota=float(input())
bonus=input()
bonus1=bonus1.upper()
print(bonus1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    bonus1=bonus1.upper()
NameError: name 'bonus1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:33) 
-- CODE:
nota=float(input())
bonus=input()
bonus1=bonus.upper()
print(bonus1)

-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:11) 
-- CODE:
nota=float(input())
bonus=input()
bonus1=bonus.upper()
print(bonus1)

if(bonus1=="S")
 nota1=nota+(nota/10);
if(bonus1=="N")
  nota1=nota
print(nota1)
-- ERROR:
File "XXXX", line 6
    if(bonus1=="S")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:24) 
-- CODE:
nota=float(input())
bonus=input()
bonus1=bonus.upper()
print(bonus1)

if(bonus1=="S"):
 nota1=nota+(nota/10);
if(bonus1=="N"):
  nota1=nota
print(nota1)
-- OUTPUT:
S
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:36) 
-- CODE:
nota=float(input())
bonus=input()
bonus1=bonus.upper()

if(bonus1=="S"):
 nota1=nota+(nota/10);
if(bonus1=="N"):
  nota1=nota
print(nota1)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:42:45) 
-- CODE:
nota=float(input())
bonus=input()
bonus1=bonus.upper()

if(bonus1=="S"):
 nota1=nota+(nota/10);
if(bonus1=="N"):
  nota1=nota
print(nota1)
-- EXECUTION TIME:
0.144917
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
